# practice_package_wenyu

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  practice_script.py  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  example_text.txt  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/practice_package_wenyu/: index.doctree
docs/_build/doctrees/autoapi/practice_package_wenyu/plotting/: index.doctree
docs/_build/doctrees/autoapi/practice_package_wenyu/pycounts/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/practice_package_wenyu/: plotting.html  pycounts.html
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/practice_package_wenyu/: index.rst.txt
docs/_build/html/_sources/autoapi/practice_package_wenyu/plotting/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/practice_package_wenyu/: index.html
docs/_build/html/autoapi/practice_package_wenyu/plotting/: index.html
docs/_build/html/autoapi/practice_package_wenyu/pycounts/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/practice_package_wenyu/: __init__.py
tests/: test_practice_package_wenyu.py  test_pycounts.py
(+1 files in other folders)
