[tool.poetry]
name = "practice_package_wenyu"
version = "0.1.0"
description = "This is a toy package to illustrate the procedure of building a python package"
authors = ["Wenyu Nie"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
